Assignment 8: update clustering notebooks, add TS2Vec demo

--- a/Assignment 8/Clustering/colabs/gmm_clustering.ipynb
+++ b/Assignment 8/Clustering/colabs/gmm_clustering.ipynb
@@ -33,8 +33,9 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('seaborn-whitegrid')\n",
-    "import numpy as np"
+    "# Using default style to avoid missing seaborn-whitegrid\n",
+    "plt.style.use('default')\n",
+    "import numpy as np\n"
    ]
   },
   {
