--- a/Assignment 8/Clustering/colabs/timeseries_clustering.ipynb
+++ b/Assignment 8/Clustering/colabs/timeseries_clustering.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "!pip install -q tslearn\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "038c1c1d",
    "metadata": {},
